1：Gson对象采用GsonBuilder().disableHtmlEscaping().create() 方式 2：点击「发送」按钮

--- a/app/src/main/res/layout/frg_send.xml
+++ b/app/src/main/res/layout/frg_send.xml
@@ -193,6 +193,7 @@
         <EditText
             android:id="@+id/etTransactionAmount"
             style="@style/edittext_style"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvTransactionAmountKey"
