--- a/app/src/main/res/drawable/bg_spinner.xml
+++ b/app/src/main/res/drawable/bg_spinner.xml
@@ -2,11 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <!--<stroke-->
-                <!--android:width="@dimen/d1"-->
-                <!--android:color="@color/white2" />-->
             <corners android:radius="@dimen/d5" />
-            <solid android:color="@color/white"></solid>
+            <solid android:color="@color/transparent"></solid>
             <padding android:right="@dimen/d10" />
         </shape>
     </item>
