--- a/app/src/main/res/layout/aty_import_wallet.xml
+++ b/app/src/main/res/layout/aty_import_wallet.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:background="@color/theme_grey">
     <include layout="@layout/inc_header" />
 
     <LinearLayout
@@ -19,7 +19,7 @@
 
         <EditText
             android:id="@+id/et_privatekey"
-            style="@style/edittext_style"
+            style="@style/edit_text_style"
             android:layout_marginTop="@dimen/d20" />
     </LinearLayout>
 
