--- a/app/src/main/res/layout/aty_insert_address.xml
+++ b/app/src/main/res/layout/aty_insert_address.xml
@@ -15,7 +15,7 @@
 
     <EditText
         android:id="@+id/etAddressName"
-        style="@style/edittext_style"
+        style="@style/edit_text_style"
         android:layout_marginLeft="@dimen/d32"
         android:layout_marginRight="@dimen/d32"
         android:layout_marginTop="@dimen/d10"
@@ -30,7 +30,7 @@
 
     <EditText
         android:id="@+id/etAddress"
-        style="@style/edittext_style"
+        style="@style/edit_text_style"
         android:layout_marginLeft="@dimen/d32"
         android:layout_marginRight="@dimen/d32"
         android:hint="@string/please_input_address" />
