--- a/app/src/main/res/layout/inc_et_private_key.xml
+++ b/app/src/main/res/layout/inc_et_private_key.xml
@@ -6,7 +6,7 @@
 
     <EditText
         android:id="@+id/et_private_key"
-        style="@style/edittext_style"
+        style="@style/edit_text_style"
         android:layout_centerVertical="true"
         android:layout_marginTop="@dimen/d10"
         android:hint="@string/input_pwd"
