首页没有交易区块的时候不显示交易区块

--- a/app/src/main/res/layout/frg_main.xml
+++ b/app/src/main/res/layout/frg_main.xml
@@ -84,9 +84,11 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/ll_transaction"
         style="@style/bg_white_style"
         android:layout_weight="3"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="invisible">
 
         <TextView
             style="@style/black_text_style"
