--- a/app/src/main/res/layout/frg_send.xml
+++ b/app/src/main/res/layout/frg_send.xml
@@ -45,9 +45,9 @@
                 <TextView
                     android:id="@+id/tvBalanceKey"
                     style="@style/black_text_style"
-                    android:layout_width="@dimen/d0"
+                    android:layout_width="wrap_content"
                     android:layout_weight="1"
-                    android:gravity="left|center_vertical"
+                    android:gravity="right|center_vertical"
                     android:text="@string/balance"
                     android:textSize="@dimen/text_size_12" />
 
@@ -55,11 +55,12 @@
                 <TextView
                     android:id="@+id/tvBalance"
                     style="@style/black_text_style"
-                    android:layout_width="@dimen/d0"
-                    android:layout_weight="2"
-                    android:gravity="left|center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_marginLeft="@dimen/d5"
+                    android:gravity="right|center_vertical"
+                    android:minWidth="@dimen/d50"
                     android:textSize="@dimen/text_size_12"
-                    tools:text="0 " />
+                    tools:text="0.000000" />
 
                 <View
                     android:id="@+id/v_vertical_line"
@@ -73,16 +74,14 @@
                 <TextView
                     android:id="@+id/tvCurrencyKey"
                     style="@style/black_text_style"
-                    android:layout_width="@dimen/d0"
-                    android:layout_weight="1"
-                    android:gravity="left|center_vertical"
+                    android:layout_width="wrap_content"
+                    android:gravity="right|center_vertical"
                     android:text="@string/currency"
                     android:textSize="@dimen/text_size_12" />
 
                 <LinearLayout
-                    android:layout_width="@dimen/d0"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
                     android:gravity="bottom|right"
                     android:orientation="horizontal">
 
@@ -198,13 +197,13 @@
 
             <Spinner
                 android:id="@+id/spSelectReceiveCurrency"
-                android:layout_width="@dimen/d0"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/d5"
-                android:layout_weight="1"
                 android:background="@drawable/bg_spinner"
                 android:dropDownHorizontalOffset="-10dp"
                 android:dropDownVerticalOffset="@dimen/d2"
+                android:gravity="right"
                 android:padding="@dimen/d2"
                 android:popupBackground="@color/transparent"
                 android:spinnerMode="dropdown" />
