--- a/app/src/main/res/layout/aty_brand.xml
+++ b/app/src/main/res/layout/aty_brand.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
-    <TextView
-        android:id="@+id/tv_info"
+    <ImageView
+        android:id="@+id/iv_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:padding="@dimen/d5"
-        android:text="@string/bcaas_u"
-        android:textColor="@color/red_da261f"
-        android:textSize="@dimen/text_size_26"
-        android:textStyle="bold" />
+        android:background="@mipmap/icon_bcaas" />
 
 </RelativeLayout>
