--- a/app/src/main/res/layout/aty_login.xml
+++ b/app/src/main/res/layout/aty_login.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/theme_grey"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <include
@@ -16,25 +16,24 @@
         android:layout_height="@dimen/d0"
         android:layout_weight="2">
 
-        <LinearLayout
-            android:id="@+id/llInputPwd"
-            style="@style/bg_white_style"
+
+        <TextView
+            android:id="@+id/tv_password_key"
+            style="@style/black_text_style"
+            android:layout_margin="@dimen/d20"
+            android:text="@string/password" />
+
+        <include
+            layout="@layout/inc_et_private_key"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                style="@style/black_text_style"
-                android:layout_margin="@dimen/d16"
-                android:text="@string/password" />
-
-            <include layout="@layout/inc_et_private_key" />
-        </LinearLayout>
+            android:layout_below="@+id/tv_password_key"
+            android:layout_margin="@dimen/d20" />
 
         <Button
             android:id="@+id/btn_unlock_wallet"
             style="@style/btn_login_style"
-            android:layout_below="@+id/llInputPwd"
-            android:layout_marginTop="@dimen/d20"
+            android:layout_below="@+id/rl_private_key"
             android:text="@string/unlock" />
 
 
