--- a/app/src/main/res/layout/frg_main.xml
+++ b/app/src/main/res/layout/frg_main.xml
@@ -7,7 +7,7 @@
 
     <RelativeLayout
         style="@style/bg_gradual_change_style"
-        android:layout_weight="1">
+        android:layout_weight="1.1">
 
         <TextView
             android:id="@+id/tvMyAddressKey"
@@ -15,15 +15,25 @@
             android:layout_marginTop="@dimen/d16"
             android:text="@string/my_account_address" />
 
+        <ImageButton
+            android:id="@+id/ib_copy"
+            android:layout_width="@dimen/d12"
+            android:layout_height="@dimen/d12"
+            android:layout_alignBottom="@+id/tvMyAddressKey"
+            android:layout_alignParentRight="true"
+            android:background="@color/grey_a7"
+            android:padding="@dimen/d10" />
+
         <TextView
             android:id="@+id/tvMyAccountAddressValue"
             style="@style/black_text_style"
-            android:layout_alignParentRight="true"
             android:layout_marginLeft="@dimen/d10"
             android:layout_marginTop="@dimen/d16"
+            android:layout_toLeftOf="@+id/ib_copy"
             android:layout_toRightOf="@+id/tvMyAddressKey"
             android:gravity="center|right"
             android:textColor="@color/value_black70" />
+
 
         <TextView
             android:id="@+id/tvCurrencyKey"
@@ -78,6 +88,7 @@
             android:layout_marginTop="@dimen/d16"
             android:layout_toRightOf="@+id/tvBalanceKey"
             android:gravity="center|right"
+            android:textColor="@color/orange_yellow"
             tools:text="0" />
 
 
@@ -86,6 +97,7 @@
     <LinearLayout
         android:id="@+id/ll_transaction"
         style="@style/bg_white_style"
+        android:layout_marginTop="@dimen/d35"
         android:layout_weight="3"
         android:orientation="vertical"
         android:visibility="invisible">
@@ -98,7 +110,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvPendingTransaction"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/d8"
             android:scrollbars="none"
             tools:listitem="@layout/item_transaction" />
