--- a/app/src/main/res/layout/aty_import_wallet.xml
+++ b/app/src/main/res/layout/aty_import_wallet.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/theme_grey">
+
     <include layout="@layout/inc_header" />
 
     <LinearLayout
@@ -10,36 +11,32 @@
         style="@style/bg_white_style"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rlHeader"
-        android:layout_marginTop="@dimen/d20"
+        android:layout_marginTop="@dimen/d100"
         android:orientation="vertical">
 
         <TextView
             style="@style/black_text_style"
+            android:layout_marginLeft="@dimen/d12"
+            android:layout_marginTop="@dimen/d20"
             android:text="@string/private_key" />
 
         <EditText
             android:id="@+id/et_privatekey"
             style="@style/edit_text_style"
+            android:layout_marginBottom="@dimen/d20"
+            android:layout_marginLeft="@dimen/d12"
+            android:layout_marginTop="@dimen/d16"
             android:hint="@string/input_private_key"
-            android:layout_marginTop="@dimen/d20" />
+            android:maxLines="2" />
     </LinearLayout>
-
-
-    <Button
-        android:id="@+id/btn_cancel"
-        style="@style/btn_style"
-        android:layout_width="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/ll_private_key"
-        android:layout_marginTop="@dimen/d20"
-        android:text="@string/cancel" />
 
     <Button
         android:id="@+id/btn_sure"
         style="@style/btn_style"
-        android:layout_width="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_width="match_parent"
         android:layout_below="@+id/ll_private_key"
-        android:layout_marginTop="@dimen/d20"
+        android:layout_marginLeft="@dimen/d10"
+        android:layout_marginRight="@dimen/d10"
+        android:layout_marginTop="@dimen/d30"
         android:text="@string/sure" />
 </RelativeLayout>
