--- a/app/src/main/res/layout/aty_insert_address.xml
+++ b/app/src/main/res/layout/aty_insert_address.xml
@@ -19,7 +19,7 @@
         android:layout_marginLeft="@dimen/d32"
         android:layout_marginRight="@dimen/d32"
         android:layout_marginTop="@dimen/d10"
-        android:hint="@string/please_input_address_alias" />
+        android:hint="@string/address_alias" />
 
     <TextView
         style="@style/black_text_style"
