--- a/app/src/main/res/layout/layout_loading_dailog.xml
+++ b/app/src/main/res/layout/layout_loading_dailog.xml
@@ -3,16 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_info"
+    <ProgressBar
+        android:id="@+id/pb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:background="@color/red2"
-        android:padding="@dimen/d5"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="@dimen/text_size_26"
-        android:textStyle="bold" />
+        android:max="100"
+        android:progress="20" />
 
 </RelativeLayout>
