--- a/app/src/main/res/layout/aty_send_toconfirm_pwd.xml
+++ b/app/src/main/res/layout/aty_send_toconfirm_pwd.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/theme_grey"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -63,6 +64,8 @@
     <Button
         android:id="@+id/btnSend"
         style="@style/btn_style"
-        android:layout_marginTop="@dimen/d40"
+        android:layout_marginLeft="@dimen/d16"
+        android:layout_marginRight="@dimen/d16"
+        android:layout_marginTop="@dimen/d30"
         android:text="@string/sure" />
 </LinearLayout>
