--- a/app/src/main/res/layout/frg_send.xml
+++ b/app/src/main/res/layout/frg_send.xml
@@ -224,6 +224,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvTransactionAmountKey"
             android:layout_marginTop="@dimen/d16"
+            android:layout_marginBottom="@dimen/d16"
             android:hint="@string/please_input_transaction_amount"
             android:inputType="numberDecimal"
             android:textColor="@color/orange_yellow"
@@ -239,6 +240,8 @@
         <Button
             android:id="@+id/btnSend"
             style="@style/btn_style"
+            android:layout_marginLeft="@dimen/d16"
+            android:layout_marginRight="@dimen/d16"
             android:layout_marginTop="@dimen/d30"
             android:text="@string/send" />
     </RelativeLayout>
