--- a/app/src/main/res/layout/frg_setting.xml
+++ b/app/src/main/res/layout/frg_setting.xml
@@ -16,6 +16,8 @@
     <Button
         android:id="@+id/btnLogout"
         style="@style/btn_style"
+        android:layout_marginLeft="@dimen/d16"
+        android:layout_marginRight="@dimen/d16"
         android:layout_marginTop="@dimen/d20"
         android:layout_width="match_parent"
         android:text="@string/logout" />
