--- a/app/src/main/res/layout/frg_setting.xml
+++ b/app/src/main/res/layout/frg_setting.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvSetting"
+        android:id="@+id/rv_setting"
         android:layout_width="match_parent"
         android:layout_marginTop="@dimen/d20"
         android:layout_height="wrap_content"
