--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,6 +43,7 @@
 
     <style name="item_text_style" parent="black_text_style">
         <item name="android:background">@color/transparent</item>
+        <item name="android:textSize">@dimen/text_size_14</item>
         <item name="android:textColor">@color/value_black70</item>
     </style>
 
