--- a/app/src/main/res/layout/aty_address_manager.xml
+++ b/app/src/main/res/layout/aty_address_manager.xml
@@ -3,25 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/theme_grey">
+    android:background="@color/theme_grey"
+    android:orientation="vertical">
 
     <include layout="@layout/inc_header" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_setting"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/d100"
         android:layout_marginBottom="@dimen/d20"
         android:layout_marginTop="@dimen/d20"
         android:background="@color/theme_grey"
         tools:listitem="@layout/item_address" />
 
-    <Button
-        android:id="@+id/btn_insert_address"
-        style="@style/btn_style"
-        android:layout_marginLeft="@dimen/d16"
-        android:layout_marginRight="@dimen/d16"
-        android:text="@string/insert_address" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/d0"
+        android:layout_weight="1">
 
+        <Button
+            android:id="@+id/btn_insert_address"
+            style="@style/btn_style"
+            android:layout_marginLeft="@dimen/d12"
+            android:layout_marginRight="@dimen/d12"
+            android:text="@string/insert_address" />
+    </LinearLayout>
 </LinearLayout>
