--- a/app/src/main/res/layout/aty_wallet_created_success.xml
+++ b/app/src/main/res/layout/aty_wallet_created_success.xml
@@ -48,6 +48,8 @@
     <Button
         android:id="@+id/btn_finish"
         style="@style/btn_style"
+        android:layout_marginLeft="@dimen/d12"
+        android:layout_marginRight="@dimen/d12"
         android:layout_marginTop="@dimen/d30"
         android:text="@string/finish" />
 
