--- a/app/src/main/res/layout/aty_address_manager.xml
+++ b/app/src/main/res/layout/aty_address_manager.xml
@@ -11,7 +11,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_setting"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/d100"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/d20"
         android:layout_marginTop="@dimen/d20"
         android:background="@color/theme_grey"
