将地址管理换成原生的数据库

--- a/app/src/main/res/layout/aty_set_pwd_for_import_wallet.xml
+++ b/app/src/main/res/layout/aty_set_pwd_for_import_wallet.xml
@@ -21,7 +21,7 @@
             android:layout_height="@dimen/d80"
             android:layout_marginTop="@dimen/d20"
             bcaas:hint="@string/set_pwd_for_import_wallet"
-            bcaas:title="@string/confirm_pwd" />
+            bcaas:title="@string/input_pwd" />
 
         <View
             android:layout_width="match_parent"
