发送页面的地址来自于数据库存储的信息

--- a/app/src/main/res/layout/frg_send.xml
+++ b/app/src/main/res/layout/frg_send.xml
@@ -139,8 +139,8 @@
             android:layout_marginRight="@dimen/d5"
             android:layout_toRightOf="@+id/tv_account_address_key"
             android:background="@drawable/bg_spinner"
-            android:dropDownHorizontalOffset="-10dp"
-            android:dropDownVerticalOffset="@dimen/d10"
+            android:dropDownHorizontalOffset="@dimen/d10"
+            android:dropDownVerticalOffset="@dimen/d25"
             android:gravity="bottom|center_horizontal"
             android:popupBackground="@color/transparent"
             android:spinnerMode="dropdown"
@@ -223,8 +223,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvTransactionAmountKey"
-            android:layout_marginTop="@dimen/d16"
             android:layout_marginBottom="@dimen/d16"
+            android:layout_marginTop="@dimen/d16"
             android:hint="@string/please_input_transaction_amount"
             android:inputType="numberDecimal"
             android:textColor="@color/orange_yellow"
