--- a/app/src/main/res/layout/inc_et_private_key.xml
+++ b/app/src/main/res/layout/inc_et_private_key.xml
@@ -17,6 +17,7 @@
         android:drawablePadding="@dimen/d10"
         android:hint="@string/input_pwd"
         android:inputType="textPassword"
+        android:maxLength="8"
         android:paddingBottom="@dimen/d10"
         android:paddingRight="@dimen/d40"
         android:textSize="@dimen/text_size_14"
