--- a/app/src/main/res/layout/aty_check_wallet_info.xml
+++ b/app/src/main/res/layout/aty_check_wallet_info.xml
@@ -30,6 +30,7 @@
         <TextView
             android:id="@+id/tvMyAccountAddressValue"
             style="@style/black_text_style"
+            android:ellipsize="middle"
             android:layout_marginLeft="@dimen/d10"
             android:layout_marginTop="@dimen/d16"
             android:layout_toLeftOf="@+id/ib_copy"
