--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -35,7 +35,6 @@
     <style name="black_text_style" parent="marquee_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:singleLine">true</item>
         <item name="android:background">@color/transparent</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">@dimen/text_size_16</item>
@@ -63,10 +62,25 @@
         <item name="android:textSize">@dimen/text_size_12</item>
     </style>
 
+    <!--账户地址的文本样式-->
+    <style name="address_text_style" parent="marquee_middle_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@color/transparent</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
+    </style>
+
     <style name="marquee_style">
         <item name="android:singleLine">true</item>
         <item name="android:marqueeRepeatLimit">marquee_forever</item>
         <item name="android:ellipsize">marquee</item>
+    </style>
+
+    <style name="marquee_middle_style">
+        <item name="android:singleLine">true</item>
+        <item name="android:marqueeRepeatLimit">marquee_forever</item>
+        <item name="android:ellipsize">middle</item>
     </style>
 
     <style name="bg_white_style">
