--- a/app/src/main/res/layout/aty_address_manager.xml
+++ b/app/src/main/res/layout/aty_address_manager.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/theme_grey"
-    android:orientation="vertical">
+    android:background="@color/theme_grey">
 
     <include layout="@layout/inc_header" />
 
@@ -12,21 +11,19 @@
         android:id="@+id/rv_setting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/btn_insert_address"
+        android:layout_below="@+id/rl_header"
         android:layout_marginBottom="@dimen/d20"
         android:layout_marginTop="@dimen/d20"
         android:background="@color/theme_grey"
         tools:listitem="@layout/item_address" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/d0"
-        android:layout_weight="1">
-
-        <Button
-            android:id="@+id/btn_insert_address"
-            style="@style/btn_style"
-            android:layout_marginLeft="@dimen/d12"
-            android:layout_marginRight="@dimen/d12"
-            android:text="@string/insert_address" />
-    </LinearLayout>
-</LinearLayout>
+    <Button
+        android:id="@+id/btn_insert_address"
+        style="@style/btn_style"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="@dimen/d12"
+        android:layout_marginBottom="@dimen/d20"
+        android:layout_marginRight="@dimen/d12"
+        android:text="@string/insert_address" />
+</RelativeLayout>
