--- a/app/src/main/res/layout/aty_import_wallet.xml
+++ b/app/src/main/res/layout/aty_import_wallet.xml
@@ -10,7 +10,7 @@
         android:id="@+id/ll_private_key"
         style="@style/bg_white_style"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rlHeader"
+        android:layout_below="@+id/rl_header"
         android:layout_marginTop="@dimen/d100"
         android:orientation="vertical">
 
