--- a/app/src/main/res/layout/inc_header.xml
+++ b/app/src/main/res/layout/inc_header.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rlHeader"
+    android:id="@+id/rl_header"
     android:layout_width="match_parent"
     android:layout_height="@dimen/d48"
     android:background="@color/white">
