查询当前余额，当余额为空的时候，显示进度条

--- a/app/src/main/res/layout/aty_check_wallet_info.xml
+++ b/app/src/main/res/layout/aty_check_wallet_info.xml
@@ -95,6 +95,18 @@
             android:layout_marginBottom="@dimen/d10"
             android:textColor="@color/orange_yellow"
             tools:text="0" />
+        <ProgressBar
+            android:id="@+id/pb_balance"
+            android:layout_width="@dimen/d20"
+            android:layout_height="@dimen/d20"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/tvCurrencyKey"
+            android:layout_marginTop="@dimen/d16"
+            android:layout_marginRight="@dimen/d5"
+            android:gravity="center|right"
+            android:indeterminateTint="@color/orange_yellow"
+            android:visibility="gone" />
+
 
     </RelativeLayout>
 
