--- a/app/src/main/res/layout/frg_send.xml
+++ b/app/src/main/res/layout/frg_send.xml
@@ -32,8 +32,8 @@
                 style="@style/black_text_style"
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="@dimen/d10"
-                android:gravity="center|right"
                 android:ellipsize="middle"
+                android:gravity="center|right"
                 android:textColor="@color/value_black70" />
 
             <LinearLayout
@@ -52,16 +52,34 @@
                     android:text="@string/balance"
                     android:textSize="@dimen/text_size_12" />
 
-
-                <TextView
-                    android:id="@+id/tvBalance"
-                    style="@style/black_text_style"
+                <RelativeLayout
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right|center_vertical"
                     android:layout_marginLeft="@dimen/d5"
                     android:gravity="right|center_vertical"
-                    android:minWidth="@dimen/d50"
-                    android:textSize="@dimen/text_size_12"
-                    tools:text="0.000000" />
+                    android:minWidth="@dimen/d50">
+
+                    <TextView
+                        android:id="@+id/tvBalance"
+                        style="@style/black_text_style"
+                        android:layout_width="wrap_content"
+                        android:layout_marginLeft="@dimen/d5"
+                        android:gravity="right|center_vertical"
+                        android:textSize="@dimen/text_size_12"
+                        tools:text="0.000000" />
+
+                    <ProgressBar
+                        android:id="@+id/pb_balance"
+                        android:layout_width="@dimen/d15"
+                        android:layout_height="@dimen/d15"
+                        android:layout_marginLeft="@dimen/d5"
+                        android:layout_marginRight="@dimen/d5"
+                        android:gravity="right|center_vertical"
+                        android:indeterminateTint="@color/orange_yellow"
+                        android:visibility="gone" />
+                </RelativeLayout>
+
 
                 <View
                     android:id="@+id/v_vertical_line"
@@ -164,8 +182,8 @@
             style="@style/edit_text_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ellipsize="middle"
             android:layout_below="@+id/tv_account_address_key"
+            android:ellipsize="middle"
             android:hint="@string/please_input_destination_address" />
 
         <View
