--- a/app/src/main/res/layout/aty_check_wallet_info.xml
+++ b/app/src/main/res/layout/aty_check_wallet_info.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tvMyAddressKey"
+            android:id="@+id/tv_address_key"
             style="@style/black_text_style"
             android:layout_marginTop="@dimen/d16"
             android:text="@string/my_account_address" />
@@ -23,39 +23,39 @@
             android:id="@+id/ib_copy"
             android:layout_width="@dimen/d12"
             android:layout_height="@dimen/d12"
-            android:layout_alignBottom="@+id/tvMyAddressKey"
+            android:layout_alignBottom="@+id/tv_address_key"
             android:layout_alignParentRight="true"
             android:src="@mipmap/icon_copy" />
 
         <TextView
-            android:id="@+id/tvMyAccountAddressValue"
+            android:id="@+id/tv_account_address_value"
             style="@style/black_text_style"
             android:ellipsize="middle"
             android:layout_marginLeft="@dimen/d10"
             android:layout_marginTop="@dimen/d16"
             android:layout_toLeftOf="@+id/ib_copy"
-            android:layout_toRightOf="@+id/tvMyAddressKey"
+            android:layout_toRightOf="@+id/tv_address_key"
             android:gravity="center|right"
             android:textColor="@color/value_black70" />
 
 
         <TextView
-            android:id="@+id/tvCurrencyKey"
+            android:id="@+id/tv_currency_key"
             style="@style/black_text_style"
             android:layout_width="wrap_content"
-            android:layout_below="@+id/tvMyAddressKey"
+            android:layout_below="@+id/tv_address_key"
             android:layout_marginTop="@dimen/d16"
             android:text="@string/currency" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tvCurrencyKey"
+            android:layout_alignBottom="@+id/tv_currency_key"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/tvMyAddressKey"
+            android:layout_below="@+id/tv_address_key"
             android:layout_marginLeft="@dimen/d10"
             android:layout_marginTop="@dimen/d2"
-            android:layout_toRightOf="@+id/tvCurrencyKey"
+            android:layout_toRightOf="@+id/tv_currency_key"
             android:gravity="bottom|right"
             android:orientation="horizontal">
 
@@ -76,21 +76,21 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvBalanceKey"
+            android:id="@+id/tv_balance_key"
             style="@style/black_text_style"
-            android:layout_below="@+id/tvCurrencyKey"
+            android:layout_below="@+id/tv_currency_key"
             android:layout_marginTop="@dimen/d16"
             android:text="@string/account_balance" />
 
         <TextView
-            android:id="@+id/tvBalance"
+            android:id="@+id/tv_balance"
             style="@style/black_text_style"
             android:layout_width="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/tvCurrencyKey"
+            android:layout_below="@+id/tv_currency_key"
             android:layout_marginLeft="@dimen/d10"
             android:layout_marginTop="@dimen/d16"
-            android:layout_toRightOf="@+id/tvBalanceKey"
+            android:layout_toRightOf="@+id/tv_balance_key"
             android:gravity="center|right"
             android:layout_marginBottom="@dimen/d10"
             android:textColor="@color/orange_yellow"
@@ -100,7 +100,7 @@
             android:layout_width="@dimen/d20"
             android:layout_height="@dimen/d20"
             android:layout_alignParentRight="true"
-            android:layout_below="@+id/tvCurrencyKey"
+            android:layout_below="@+id/tv_currency_key"
             android:layout_marginTop="@dimen/d16"
             android:layout_marginRight="@dimen/d5"
             android:gravity="center|right"
