--- a/app/src/main/res/layout/frg_send.xml
+++ b/app/src/main/res/layout/frg_send.xml
@@ -12,7 +12,7 @@
         android:gravity="center_vertical">
 
         <TextView
-            android:id="@+id/tvMyAddressKey"
+            android:id="@+id/tv_address_key"
             style="@style/black_text_style"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -23,12 +23,14 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/d10"
-            android:layout_toRightOf="@+id/tvMyAddressKey"
+            android:layout_marginBottom="@dimen/d16"
+            android:layout_marginLeft="@dimen/d10"
+            android:layout_marginTop="@dimen/d16"
+            android:layout_toRightOf="@+id/tv_address_key"
             android:gravity="right|center_vertical">
 
             <TextView
-                android:id="@+id/tvMyAccountAddressValue"
+                android:id="@+id/tv_account_address_value"
                 style="@style/black_text_style"
                 android:layout_alignParentRight="true"
                 android:layout_marginLeft="@dimen/d10"
@@ -39,12 +41,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/d38"
-                android:layout_below="@+id/tvMyAccountAddressValue"
+                android:layout_below="@+id/tv_account_address_value"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/tvBalanceKey"
+                    android:id="@+id/tv_balance_key"
                     style="@style/black_text_style"
                     android:layout_width="wrap_content"
                     android:layout_weight="1"
@@ -61,7 +63,7 @@
                     android:minWidth="@dimen/d50">
 
                     <TextView
-                        android:id="@+id/tvBalance"
+                        android:id="@+id/tv_balance"
                         style="@style/black_text_style"
                         android:layout_width="wrap_content"
                         android:layout_marginLeft="@dimen/d5"
@@ -85,40 +87,34 @@
                     android:id="@+id/v_vertical_line"
                     android:layout_width="@dimen/d0.2"
                     android:layout_height="@dimen/d15"
-                    android:layout_below="@+id/tvMyAccountAddressValue"
+                    android:layout_below="@+id/tv_account_address_value"
                     android:layout_margin="@dimen/d2"
-                    android:layout_toRightOf="@+id/tvBalance"
+                    android:layout_toRightOf="@+id/tv_balance"
                     android:background="@color/black" />
 
                 <TextView
-                    android:id="@+id/tvCurrencyKey"
+                    android:id="@+id/tv_currency_key"
                     style="@style/black_text_style"
                     android:layout_width="wrap_content"
                     android:gravity="right|center_vertical"
                     android:text="@string/currency"
                     android:textSize="@dimen/text_size_12" />
 
-                <LinearLayout
+                <TextView
+                    android:id="@+id/tv_currency"
+                    style="@style/black_text_style"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="bottom|right"
-                    android:orientation="horizontal">
+                    android:layout_margin="@dimen/d5"
+                    android:textSize="@dimen/text_size_12" />
 
-                    <Spinner
-                        android:id="@+id/sp_select"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/bg_spinner"
-                        android:dropDownHorizontalOffset="-10dp"
-                        android:dropDownVerticalOffset="@dimen/d1"
-                        android:gravity="left|center"
-                        android:minWidth="@dimen/d70"
-                        android:padding="@dimen/d1"
-                        android:popupBackground="@color/transparent"
-                        android:spinnerMode="dropdown" />
-
-
-                </LinearLayout>
+                <Button
+                    android:id="@+id/btn_select_currency"
+                    android:layout_width="@dimen/d17"
+                    android:layout_height="@dimen/d17"
+                    android:background="@mipmap/icon_dropdown"
+                    android:paddingLeft="@dimen/d5"
+                    android:paddingRight="@dimen/d5" />
             </LinearLayout>
         </RelativeLayout>
 
@@ -129,7 +125,7 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/tvTransactionBlockTitle"
+            android:id="@+id/tv_transaction_block_title"
             style="@style/black_text_style"
             android:layout_marginTop="@dimen/d20"
             android:text="@string/receive_account" />
@@ -138,7 +134,8 @@
             android:id="@+id/v_line"
             android:layout_width="match_parent"
             android:layout_height="@dimen/d1"
-            android:layout_below="@+id/tvTransactionBlockTitle"
+            android:layout_below="@+id/tv_transaction_block_title"
+            android:layout_marginBottom="@dimen/d16"
             android:layout_marginTop="@dimen/d10"
             android:background="@color/title_black30" />
 
@@ -146,36 +143,18 @@
             android:id="@+id/tv_account_address_key"
             style="@style/black_text_style"
             android:layout_below="@+id/v_line"
-            android:layout_marginTop="@dimen/d16"
             android:text="@string/account_address" />
-
-        <Spinner
-            android:id="@+id/sp_select_account_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tv_account_address_key"
-            android:layout_marginLeft="@dimen/d5"
-            android:layout_marginRight="@dimen/d5"
-            android:layout_toRightOf="@+id/tv_account_address_key"
-            android:background="@drawable/bg_spinner"
-            android:dropDownHorizontalOffset="@dimen/d10"
-            android:dropDownVerticalOffset="@dimen/d25"
-            android:gravity="bottom|center_horizontal"
-            android:popupBackground="@color/transparent"
-            android:spinnerMode="dropdown"
-            android:visibility="invisible" />
 
         <Button
             android:id="@+id/btn_select_address"
-            android:layout_width="@dimen/d18"
-            android:layout_height="@dimen/d18"
+            android:layout_width="@dimen/d17"
+            android:layout_height="@dimen/d17"
             android:layout_alignBottom="@+id/tv_account_address_key"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/v_line"
-            android:layout_marginLeft="@dimen/d5"
-            android:layout_marginRight="@dimen/d5"
-            android:layout_marginTop="@dimen/d16"
-            android:background="@mipmap/icon_dropdown" />
+            android:background="@mipmap/icon_dropdown"
+            android:paddingLeft="@dimen/d5"
+            android:paddingRight="@dimen/d5" />
 
         <EditText
             android:id="@+id/et_input_destination_address"
@@ -195,7 +174,7 @@
             android:background="@color/title_black10" />
 
         <LinearLayout
-            android:id="@+id/llSelectCurrency"
+            android:id="@+id/ll_select_currency"
             android:layout_width="match_parent"
             android:layout_height="@dimen/d45"
             android:layout_below="@+id/v_line_2"
@@ -206,7 +185,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvSelectCurrencyKey"
+                android:id="@+id/tv_select_currency_key"
                 style="@style/black_text_style"
                 android:layout_width="@dimen/d0"
                 android:layout_height="wrap_content"
@@ -215,34 +194,36 @@
                 android:gravity="center_vertical"
                 android:text="@string/currency" />
 
-            <Spinner
-                android:id="@+id/spSelectReceiveCurrency"
+            <TextView
+                android:id="@+id/tv_transaction_currency"
+                style="@style/black_text_style"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/d5"
-                android:background="@drawable/bg_spinner"
-                android:dropDownHorizontalOffset="-10dp"
-                android:dropDownVerticalOffset="@dimen/d2"
-                android:gravity="right"
-                android:padding="@dimen/d2"
-                android:popupBackground="@color/transparent"
-                android:spinnerMode="dropdown" />
+                android:layout_margin="@dimen/d5" />
+
+            <Button
+                android:id="@+id/btn_select_transaction_currency"
+                android:layout_width="@dimen/d17"
+                android:layout_height="@dimen/d17"
+                android:background="@mipmap/icon_dropdown"
+                android:paddingLeft="@dimen/d5"
+                android:paddingRight="@dimen/d5" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tvTransactionAmountKey"
+            android:id="@+id/tv_transaction_amount_key"
             style="@style/black_text_style"
-            android:layout_below="@+id/llSelectCurrency"
+            android:layout_below="@+id/ll_select_currency"
             android:layout_marginTop="@dimen/d16"
             android:inputType="number"
             android:text="@string/transaction_amount" />
 
         <EditText
-            android:id="@+id/etTransactionAmount"
+            android:id="@+id/et_transaction_amount"
             style="@style/edit_text_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvTransactionAmountKey"
+            android:layout_below="@+id/tv_transaction_amount_key"
             android:layout_marginBottom="@dimen/d16"
             android:layout_marginTop="@dimen/d16"
             android:hint="@string/please_input_transaction_amount"
@@ -258,7 +239,7 @@
         android:layout_weight="1">
 
         <Button
-            android:id="@+id/btnSend"
+            android:id="@+id/btn_send"
             style="@style/btn_style"
             android:layout_marginLeft="@dimen/d12"
             android:layout_marginRight="@dimen/d12"
