--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -15,7 +15,7 @@
         android:layout_weight="2" />
 
     <TextView
-        android:id="@+id/tvBalance"
+        android:id="@+id/tv_balance"
         style="@style/item_text_style"
         android:layout_width="@dimen/d0"
         android:layout_marginLeft="@dimen/d5"
